--- a/public/style.css
+++ b/public/style.css
@@ -121,7 +121,7 @@ nav {
 	}
 }
 
-#editor {
+#editor-container {
 	grid-area: editor;
 	margin-bottom: 1px;
 	padding: var(--outline-radius);
@@ -134,6 +134,7 @@ nav {
 
 .monaco-editor {
 	width: 100% !important;
+	height: calc(100% - 100px) !important;
 }
 
 .small-preview {
@@ -178,5 +179,19 @@ nav {
 		position: relative;
 		left: 1px;
 		color: gray;
+	}
+}
+
+#submit-form {
+	label {
+		display: block;
+	}
+
+	form {
+		display: flex;
+		flex-flow: row wrap;
+		gap: 8px;
+		justify-content: flex-end;
+		margin-top: 8px;
 	}
 }
