Add purposes amount buttons (not working yet)

--- a/public/style.css
+++ b/public/style.css
@@ -263,3 +263,35 @@ select {
 	padding: var(--main-padding);
 	border: 1px solid black;
 }
+
+settings {
+	button {
+		--button-walls-color: black;
+		background-color: white;
+		border: 1px solid var(--button-walls-color);
+		border-radius: 3px;
+		box-shadow:
+			1px 1px 0px var(--button-walls-color),
+			2px 2px 0px var(--button-walls-color);
+		position: relative;
+		left: -2px;
+		bottom: 2px;
+		padding: var(--main-padding);
+		cursor: pointer;
+
+		&:hover {
+			box-shadow:
+				1px 1px 0px var(--button-walls-color),
+				2px 2px 0px var(--button-walls-color),
+				3px 3px 0px var(--button-walls-color);
+			left: -3px;
+			bottom: 3px;
+		}
+
+		&:active {
+			box-shadow: 1px 1px 0px var(--button-walls-color);
+			left: -1px;
+			bottom: 1px;
+		}
+	}
+}
